# agentkit

./: .gitignore  README.md  pyproject.toml
agentkit/: __init__.py  cli.py  git_gate.py  loader.py  state.py  task.py
agentkit/docs/: AUTHORING_TASKS.md
agentkit/templates/global_skill/: SKILL.md
agentkit/templates/task_project/: CLAUDE.md  README.md  task.py
agentkit/templates/training_run/: BOOTSTRAP.md  CLAUDE.md  gitignore
