[project]
name = "agentkit"
version = "0.0.1"
description = "A framework for agents that learn how to learn — they design their own learning algorithm and run it against a task."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=2.18",
    "click>=8.1",
]

[project.scripts]
agentkit = "agentkit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentkit"]

[tool.hatch.build.targets.wheel.force-include]
"agentkit/templates" = "agentkit/templates"
"agentkit/docs" = "agentkit/docs"
